--- a/project.json
+++ b/project.json
@@ -5,9 +5,9 @@
   "bounty": "Coordination Infrastructure",
   "team": [
     {
-      "name": "Your Name",
-      "role": "Full Stack Developer",
-      "github": "your-github-username"
+      "name": "Nico",
+      "role": "Full Stack Developer & Smart Contract Engineer",
+      "github": "elnicomaldonado"
     }
   ],
   "demo": {
@@ -48,7 +48,7 @@
     "Mobile-First Design"
   ],
   "status": "Deployed & Working on Celo Sepolia Testnet",
-  "license": "MIT",
+  "license": "Proprietary - All rights reserved by Nico",
   "created": "2025-10-06",
   "updated": "2025-10-06"
 }
